# pacman-agent

./: .gitignore  .gitmodules  LICENSE  README.md  TEAM.md  my_team.py  pyproject.toml
scripts/: config.sh  play.sh
