[project]
name = "pacman-agent"
version = "0.1.0"
description = "A Pacman Capture the Flag agent"
requires-python = ">=3.8"
dependencies = [
    # Contest framework dependencies
    "frozendict==2.3.4",
    # from original requirements.txt
    "certifi==2024.7.4",
    "cffi==1.15.0",
    "charset-normalizer==2.0.12",
    "Deprecated==1.2.13",
    "gitdb==4.0.9",
    "GitPython==3.1.41",
    "idna==3.7",
    "pycparser==2.21",
    "PyGithub==1.55",
    "PyJWT==2.4.0",
    "PyNaCl==1.5.0",
    "pytz==2022.1",
    "requests==2.32.4",
    "smmap==5.0.0",
    "urllib3==2.5.0",
    "wrapt==1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
